Fix margin&padding so things align to the left

--- a/app/assets/stylesheets/challenges/challenges.css.scss
+++ b/app/assets/stylesheets/challenges/challenges.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .status {
-  margin: 10px;
+  margin: 10px 0;
   padding: 10px;
   color: white;
   font-weight: bold;
